2001-03-13  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-fix-before-sending): Hide again the
	invisible property of encoded binary data parts after checking is
	done.
	(message-find-invisible-regions): New function.
	(message-save-drafts, message-send): Inherit the invisible property
	of encoded binary data parts to make MIME-Edit find the MIME part
	boundaries.

	* lisp/dgnushack.el (dgnushack-compose-package): Tidy up.
	(dgnushack-make-load): Ditto.

2001-03-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-compose-package): New function.
	(dgnushack-make-load): Add autoload for cus-load if it is missing.

	* lisp/Makefile.in (compose-package): Use
	`dgnushack-compose-package'.
	(clean, clever): Remove custom-load.el.

	* Makefile.in (elclean): Remove custom-load.el.

2001-03-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-prepare-display): Setup MIME
	entity even if `gnus-show-mime' is nil.

2001-03-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el: Load gnus-clfns.el after `load-path' is
	adjusted.

	* lisp/gnus-clfns.el (string): New compiler macro.
	(string): Defun-maybe as an ordinary function since it won't be
	provided in cl.
	* lisp/gnus-score.el (gnus-score-find-bnews): Use it as Gnus does.

2001-03-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-retrieve-url): Check if
	`url-current-mime-charset' is bound.

2001-03-04  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-info-find-node): Pretend to be
	`gnus-article-mode' in the article buffer.

2001-03-02  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-kinsoku-eol-list): Simplified.
	(nnshimbun-kinsoku-bol-list): Ditto.

2001-03-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 09.

	* lisp/gnus-offline.el (gnus-offline-get-menu-items): Rewrite using
	`dolist'.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): Simplified.
