@@ -1,3 +1,8 @@
+2001-03-19  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/gnus-kill.el (gnus-execute): Work with the extra headers.
+	* lisp/gnus-sum.el (gnus-summary-execute-command): Ditto.
+
 2001-03-13  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/message.el (message-fix-before-sending): Hide again the
